test : LottoCount 검증 테스트